movie router link click overlap heart click - fixed

--- a/UNIT3/week3/day5/exercise/src/app/components/films-carousel-item/films-carousel-item.component.scss
+++ b/UNIT3/week3/day5/exercise/src/app/components/films-carousel-item/films-carousel-item.component.scss
@@ -11,6 +11,10 @@
   display: block;
 }
 
+.movieTitle {
+  width: 80%;
+}
+
 .bi-heart {
   color: white;
   cursor: pointer;
